bk_ida/gccida/c0/rest_of_compilation
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:2896:15: error: use of undeclared identifier 'TV_REST_OF_COMPILATION_0'; did you mean 'TV_REST_OF_COMPILATION'?
timevar_push( TV_REST_OF_COMPILATION_0); 
              ^~~~~~~~~~~~~~~~~~~~~~~~
              TV_REST_OF_COMPILATION
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:89:13: note: 'TV_REST_OF_COMPILATION' declared here
DEFTIMEVAR (TV_REST_OF_COMPILATION   , "rest of compilation")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:2919:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:2921:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:2982:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:2984:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3017:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3022:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3027:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3032:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3041:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3052:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3061:15: error: use of undeclared identifier 'TV_TO_SSA_0'; did you mean 'TV_TO_SSA'?
timevar_push( TV_TO_SSA_0); 
              ^~~~~~~~~~~
              TV_TO_SSA
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:81:13: note: 'TV_TO_SSA' declared here
DEFTIMEVAR (TV_TO_SSA                , "convert to SSA")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3068:14: error: use of undeclared identifier 'TV_TO_SSA_0'; did you mean 'TV_TO_SSA'?
timevar_pop( TV_TO_SSA_0); 
             ^~~~~~~~~~~
             TV_TO_SSA
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:81:13: note: 'TV_TO_SSA' declared here
DEFTIMEVAR (TV_TO_SSA                , "convert to SSA")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3071:15: error: use of undeclared identifier 'TV_SSA_CCP_0'; did you mean 'TV_SSA_CCP'?
timevar_push( TV_SSA_CCP_0); 
              ^~~~~~~~~~~~
              TV_SSA_CCP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:82:13: note: 'TV_SSA_CCP' declared here
DEFTIMEVAR (TV_SSA_CCP               , "SSA CCP")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3076:14: error: use of undeclared identifier 'TV_SSA_CCP_0'; did you mean 'TV_SSA_CCP'?
timevar_pop( TV_SSA_CCP_0); 
             ^~~~~~~~~~~~
             TV_SSA_CCP
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:82:13: note: 'TV_SSA_CCP' declared here
DEFTIMEVAR (TV_SSA_CCP               , "SSA CCP")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3080:15: error: use of undeclared identifier 'TV_SSA_DCE_0'; did you mean 'TV_SSA_DCE'?
timevar_push( TV_SSA_DCE_0); 
              ^~~~~~~~~~~~
              TV_SSA_DCE
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:83:13: note: 'TV_SSA_DCE' declared here
DEFTIMEVAR (TV_SSA_DCE               , "SSA aggressive DCE")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3085:14: error: use of undeclared identifier 'TV_SSA_DCE_0'; did you mean 'TV_SSA_DCE'?
timevar_pop( TV_SSA_DCE_0); 
             ^~~~~~~~~~~~
             TV_SSA_DCE
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:83:13: note: 'TV_SSA_DCE' declared here
DEFTIMEVAR (TV_SSA_DCE               , "SSA aggressive DCE")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3087:15: error: use of undeclared identifier 'TV_FROM_SSA_0'; did you mean 'TV_FROM_SSA'?
timevar_push( TV_FROM_SSA_0); 
              ^~~~~~~~~~~~~
              TV_FROM_SSA
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:84:13: note: 'TV_FROM_SSA' declared here
DEFTIMEVAR (TV_FROM_SSA              , "convert from SSA")
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/toplev.c:3093:14: error: use of undeclared identifier 'TV_FROM_SSA_0'; did you mean 'TV_FROM_SSA'?
timevar_pop( TV_FROM_SSA_0); 
             ^~~~~~~~~~~~~
             TV_FROM_SSA
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/timevar.def:84:13: note: 'TV_FROM_SSA' declared here
DEFTIMEVAR (TV_FROM_SSA              , "convert from SSA")
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rest_of_compilation/src/obj/toplev.o] Error 1
